--- a/server/service/service.csproj
+++ b/server/service/service.csproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Google.Apis" Version="1.45.0" />
+      <PackageReference Include="Google.Apis.Sheets.v4" Version="1.45.0.1930" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
     </ItemGroup>
